# mdm-claude

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
deploy/: install.sh  mdm-purge.service  mdm-purge.timer  mdm.service  nginx-mdm.conf  uninstall.sh
docs/: solution-brief.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  utils.ts
src/mdm/: audit.py  auth.py  chat_query.py  client_extraction.py  cnpj_validation.py  config.py  cpf_validation.py  dashboard.py  db.py  documents.py  domains.py  duplicates.py  extraction_schema.py  field_validation.py  i18n.py  main.py  (+15 more)
tests/: conftest.py  test_audit_log.py  test_auth_login.py  test_auth_logout.py  test_auth_mfa.py  test_auth_user_creation_authz.py  test_auth_users.py  test_chat_query.py  test_client_duplicates.py  test_client_extraction.py  test_client_review.py  test_cnpj_validation.py  test_cpf_validation.py  test_dashboard.py  test_db_migration.py  test_documents.py  test_documents_extraction.py  test_duplicates.py  test_field_validation.py  test_health.py  test_i18n.py  test_invoice_layout_regression.py  test_job_listing.py  test_llm_extraction.py  test_master_record_edit.py  test_master_record_edit_requests.py  test_master_records.py  test_output_safety.py  test_pdf_extraction.py  test_product_duplicates.py  test_product_extraction.py  test_product_review.py  test_prompt_injection.py  test_ready.py  test_regex_candidates.py  test_resolve_bind_address.py  test_retention_purge.py  test_review.py  test_role_tagging.py  test_scoring.py  (+4 more)
(+30 files in other folders)
