[project]
name = "mdm"
version = "0.1.0"
description = "Master Data Registration Automation"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "cryptography",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
